Cleanup of MetaschemaPathEvaluationVisitor. Refactoring of loader code to generalize it. Refactoring of modules to include renaming package and class names, and relocating implementation neutral code to the common module.